RESOLVED FIXED193139
WebDriver: element click command should handle user prompts
https://bugs.webkit.org/show_bug.cgi?id=193139
Summary WebDriver: element click command should handle user prompts
Carlos Garcia Campos
Reported 2019-01-04 06:34:32 PST
Tests are currently timing out because of this.
Attachments
Patch (5.18 KB, patch)
2019-01-04 06:36 PST, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2019-01-04 06:36:23 PST
EWS Watchlist
Comment 2 2019-01-04 06:37:36 PST
Attachment 358315 [details] did not pass style-queue: ERROR: Source/WebDriver/Session.cpp:1551: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3 2019-01-04 08:27:31 PST
Radar WebKit Bug Importer
Comment 4 2019-01-04 08:28:29 PST
Note You need to log in before you can comment on or make changes to this bug.