WebDriver: element click command should handle user prompts https://bugs.webkit.org/show_bug.cgi?id=193139

Reviewed by Michael Catanzaro.

* Session.cpp:
(WebDriver::Session::elementClick): Handle user prompts.

Canonical link: https://commits.webkit.org/207638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239610 268f45cc-cd09-0410-ab3c-d52691b4dbfc